<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Читало</string>
    <string name="action_settings">Налаштування</string>
    <string name="add_new_feed">Додати нову стрічку</string>
    <string name="title_activity_add_feed">Додайте стрічку для слідкування</string>
    <string name="save_feed">Зберегти стрічку</string>
    <string name="paste_url_hint">Вставте або напишіть послислання на RSS</string>
    <string name="feed_url_title">Посилання на стрічку:</string>
    <string name="title">Назва:</string>
    <string name="not_valid_rss_feed">Це невірне посилання на стрічку, спробуйте ввести інше посилання.</string>
    <string name="already_following_feed">Ви вже читаєте цю стрічку, спробуйте ввести інше посилання.</string>
    <string name="add_feed_notify">Додано стрічку: %s</string>
    <string name="refresh_menu_option">Оновити</string>
    <string name="key_prefs_refresh_frequency">key_prefs_refresh_frequency</string>
    <string name="key_prefs_headlines_count">key_prefs_headlines_count</string>
    <string name="action_local_sync_finished">com.tereshchenkoulyana.chitalo.ACTION_FINISHED_SYNC</string>
    <string name="headlines_synced">Заголовки синхронизовані з wearable</string>
    <string name="remove_feed_title">Видалити стрічку?</string>
    <string name="remove_feed_confirm_message">Ви впевнені що хочете видалити цю стрічку?</string>
    <string name="syncing_headlines_toast">Синхронізація Заголовків з Wearable</string>
    <string name="sync_no_wearable">Будь ласка підєднайте wearable щоб отримувати заголовки</string>
    <string name="key_prefs_alarms_started">key_prefs_alarms_started</string>
    <string name="error_refreshing_ex">Помилка оновлення</string>
    <string name="error_syncing_headlines">Вийшла помилка при синхронізації заголовків. Будь ласка спробуйте ще.</string>
    <string name="add_sample_feeds_title">Додати стрічку за замовченням</string>
    <string name="sample_feeds_description">Додайте декілька стрічок щоб почати.</string>
    <string name="oss_licenses">Відкрити Ліцензії Ресурсів</string>
    <string name="key_prefs_licenses">key_prefs_licenses</string>
    <string name="key_prefs_sample_feeds">key_prefs_sample_feeds</string>
    <string name="sample_add_success">Стрічки за замовченням успішно додані</string>
    <string name="no_feeds_message">У вас зовсім немає стрічок!\n\nДодайте стрічки тапнувши на \'+\' іконку.\n\nТакож ви можете додати стрічки за замовченням у налаштуваннях.</string>
    <string name="receive_headline_intent">com.tereshchenkoulyana.chitalo.receiveheadline</string>
    <string name="open_in_browser_menu">Відкрити в браузері</string>
    <string name="delete_menu">Видалити</string>
    <string name="open_in_browser_title">Відкрити В Браузері</string>
    <string name="select_articles_to_open">Будь ласка виберіть одну чи декілька стрічок щоб відкрити їх.</string>
    <string name="delete_article_title">Видалити прочитані статті зі списку</string>
    <string name="select_articles_to_delete">Виберіть одну чи декілька статей для видалення.</string>
    <string name="confirm_article_delete">Підтвердити Видалення Статті</string>
    <string name="confirm_article_delete_message">Ви впевненні що хочете видалити вибранну статтю(статті)?</string>
    <string name="key_prefs_read_item_tap">key_prefs_read_item_tap</string>
    <string name="pref_title_readlist_tap_action">Тап на списку статей для прочитання</string>
    <string name="select_all">Вибрати Усі</string>
    <string name="select_none">Невибирати усі</string>
    <string name="no_read_items_instruction">Додавайте статті у список для читання з вашого Android Wear.</string>
    <string name="choose_app_dialog_title">Вибрати додаток</string>
    <string name="share_to_title">Поділитись з...</string>
    <string name="key_stored_specific_share_app">key_stored_specific_share_app</string>
    <string name="articles_shared_notify">"Ви поділитесь статтями з: "</string>
    <string name="no_items_selected_title">Не Вибрано Пунктів</string>
    <string name="please_select_items_tap_action">Будь ласка виберіть статі щоб відкрити/Поділитись.</string>
    <string name="key_prefs_article_select_from_watch">key_prefs_article_select_from_watch</string>
    <string name="save_articles_wearable_title">Пропустити цей список для читання</string>
    <string name="save_directly_to_app_summary">Використовуйте ваш wearable щоб розшарити у обраному додатку.</string>
</resources>
